# supersurfel_fusion

./: CMakeLists.txt  README.md  package.xml
cmake/: UseCUDA.cmake
config/: SupersurfelFusionRGBDBenchmark.cfg  conf.rviz  conf_mod.rviz  conf_record.rviz  conf_record_mod.rviz  conf_tum.rviz
core/include/supersurfel_fusion/: TPS_RGBD.hpp  TPS_RGBD_kernels.cuh  cached_allocator.hpp  cam_param.hpp  cuda_error_check.h  cuda_utils_dev.cuh  deformation_graph.hpp  deformation_graph_kernels.cuh  deformation_graph_types.hpp  dense_registration.hpp  dense_registration_kernels.cuh  dense_registration_types.hpp  ferns.hpp  ferns_kernels.cuh  ferns_types.hpp  local_map.hpp  matrix_math.cuh  matrix_types.h  motion_detection.hpp  motion_detection_kernels.cuh  pnp_solver.hpp  reduce_dev.cuh  sparse_vo.hpp  supersurfel_fusion.hpp  supersurfel_fusion_kernels.cuh  supersurfels.hpp  texture.hpp  texture_impl.hpp  vector_math.cuh
core/src/: TPS_RGBD.cu  TPS_RGBD_kernels.cu  cached_allocator.cpp  deformation_graph.cu  deformation_graph_kernels.cu  dense_registration.cu  dense_registration_kernels.cu  ferns.cu  ferns_kernels.cu  local_map.cpp  motion_detection.cu  motion_detection_kernels.cu  pnp_solver.cpp  sparse_vo.cpp  supersurfel_fusion.cu  supersurfel_fusion_kernels.cu
launch/: supersurfel_fusion.launch  supersurfel_fusion_realsense.launch  supersurfel_fusion_realsense_rviz.launch  supersurfel_fusion_rgbd_benchmark.launch  supersurfel_fusion_rviz.launch
licenses/: LICENSES.txt
node/: main.cpp  main_rgbd_benchmark.cpp  supersurfel_fusion_node.cpp  supersurfel_fusion_node.hpp  supersurfel_fusion_rgbd_benchmark_node.cpp  supersurfel_fusion_rgbd_benchmark_node.hpp
rgbd_benchmark/: fr1_cam.yaml  fr3_cam.yaml
rgbd_benchmark/rgbd_dataset_freiburg1_xyz/: associations_with_gt.txt  estimated.txt  gt_associations.txt
rgbd_benchmark/rgbd_dataset_freiburg3_walking_halfsphere/: accelerometer.txt  associations.txt  associations_with_gt.txt  depth.txt  estimated.txt  groundtruth.txt  gt_associations.txt  rgb.txt
